--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "video.js": "^8.5.2",
+    "videojs-abloop": "^1.2.0",
     "vue": "^2.6.14"
   },
   "devDependencies": {
