--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "video.js": "^8.5.2",
+    "video.js": "^7.21.3",
     "videojs-abloop": "^1.2.0",
     "vue": "^2.6.14"
   },
@@ -21,7 +21,9 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "sass": "^1.32.7",
+    "sass-loader": "^12.0.0"
   },
   "eslintConfig": {
     "root": true,
