--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.8.3",
     "video.js": "^7.21.3",
     "videojs-abloop": "^1.2.0",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
