--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "video.js": "^7.21.3",
     "videojs-abloop": "^1.2.0",
+    "videojs-offset": "^2.1.3",
     "vue": "^2.6.14",
     "vuex": "^3.6.2"
   },
